--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -126,7 +126,7 @@ function attachQuill(element,placeholder){
 
 //this is used to keep track of the oldest post currently loaded in the feed; when the infinite scroll script fetches the next page of posts,
 //it should start with posts just older than that. it starts out with the current time as a placeholder (obvs we only have posts older than the current time.)
-lastpostloadedtime = new Date().getTime();
+needPostsOlderThan = new Date().getTime();
 
 $(function() {
     //this is here bc this is the first of our scripts to be linked in in the layout, and this should be the first thing the browser does
@@ -175,7 +175,7 @@ $(function() {
     $('#postsContainer').on('append.infiniteScroll', function (event, response, path, items) {
         var newlyLoadedStuff = $(items);
 
-        lastpostloadedtime = newlyLoadedStuff.last().find("#oldesttimestamp").html(); //the new oldest-post-loaded timestamp is provided by the server in this element
+        needPostsOlderThan = newlyLoadedStuff.last().find("#oldesttimestamp").html(); //the new oldest-post-loaded timestamp is provided by the server in this element
 
         if (newlyLoadedStuff.find('.post-images').length > 0) {
             var imagesLoaded = newlyLoadedStuff.find('.post-single-image').length;
