mess with infinite scroll restarting

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -86,7 +86,7 @@
 {{> filemessage }}
 
 <script>
-  //called immediately below and also when a post is made and the feed is reloaded to show it
+  //called immediately below only atm
   function startInfiniteScroll() {
       $('#postsContainer').infiniteScroll({
           path: function() {
