--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -317,7 +317,7 @@
 
 {{#unless isBanned}}
 <script>
-  //called immediately below and also when a post is made and the feed is reloaded to show it
+  //called immediately below only atm
   function startInfiniteScroll(){
     $('#postsContainer').infiniteScroll({
       path: function() {
