--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -213,6 +213,10 @@ $(function() {
     $('#postsContainer').on('append.infiniteScroll', function (event, response, path, items) {
         var newlyLoadedStuff = $(items);
 
+        if(this.fadedOut){
+            $(this).fadeIn(250);
+        }
+
         needPostsOlderThan = newlyLoadedStuff.last().find("#oldesttimestamp").html(); //the new oldest-post-loaded timestamp is provided by the server in this element
 
         if (newlyLoadedStuff.find('.post-images').length > 0) {
