--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -11,16 +11,13 @@
 
 function restartInfiniteScroll(){
   var postsContainer = $('#postsContainer');
-    postsContainer.infiniteScroll('destroy');
-    postsContainer.fadeOut(100,function(){
+    postsContainer.fadeOut(250,function(){
       postsContainer.html("");
-      needPostsOlderThan = new Date().getTime(); //we now want posts just older than the current time, to include the post that was just made
-      startInfiniteScroll();
-      postsContainer.fadeIn(100);
+      needPostsOlderThan = new Date().getTime()+1; //we now want posts just older than the current time, to include the post that was just made
+      postsContainer.infiniteScroll('loadNextPage');
+      postsContainer[0].fadedOut = true;
     });
   }
-
-
 
 //NEW POST FORM CODE
 
