--- a/views/partials/miscInteractivityScripts.handlebars
+++ b/views/partials/miscInteractivityScripts.handlebars
@@ -31,11 +31,6 @@ $(function() {
 
   $("#notificationsContainer").load( "/api/notification/display" );
 
-  // $('#notificationsDropdownLink, #notificationsPageLink').hover(function(){
-  //   $(this).find('.notifications-count').css('color', '#ce1717');
-  // }, function() {
-  //   $(this).find('.notifications-count').css('color', '#6c757d');
-  // });
   if ($('#notificationsPageLink').hasClass('active')){
     $('#notificationsPageLink').find('.notifications-count').css('color', '#900202');
   }
@@ -63,7 +58,7 @@ $(function() {
       });
   })
 
-
+  //not currently used
   $("#darkModeToggle").click(function(e){
     e.preventDefault();
     if ($(this).hasClass('notification-active')){
@@ -185,17 +180,6 @@ $(function() {
         })
     })
 
-  // $('body').on('click', '.fullBoostList', function(e) {
-  //   var thisList = $(this);
-  //   thisList.removeClass('fullBoostList');
-  //   thisList.addClass('fullBoostListClicked');
-  //   function removeBoostListPopUp(e){
-  //     thisList.removeClass('fullBoostListClicked');
-  //     thisList.addClass('fullBoostList');
-  //     $('body').off('click', removeBoostListPopUp);
-  //   }
-  //   $('body').on('click', removeBoostListPopUp);
-  // })
   $('body').on('click', '.content-warning-show-more', function() {
     var $this = $(this);
     var images = $this.closest(".post").find(".content-warning-images");
@@ -283,115 +267,7 @@ $(function() {
       }
     });
   })
-  $('body').on('click', '.create-comment', function() {
-    let commentButton = $(this);
-    let commentForm = commentButton.closest('.new-comment-form');
-    let commentType = commentForm.attr('data-comment-type');
-    let postID = commentForm.attr('data-post-id');
-    let commentID = commentForm.attr('data-comment-id');
-    let commentContainer = commentForm.find(".ql-container");
-    let commentEditor = commentForm.find('.ql-editor');
-    let commentContent = commentEditor.html();
-    if (commentType == "primary") {
-        commentsContainer = commentButton.closest('.comments').find('.comments-container');
-    }
-    else if (commentType == "child") {
-        commentsContainer = commentButton.closest('.comments-container').find('.comment[data-comment-id='+commentID+']').find('.replies')[0];
-    }
-    let emojiWindow = commentForm.find('.replyEmojiWindow');
 
-    let pc = commentForm.find('#image-preview-holder')[0];
-
-    var sortedurls = []; //will contain urls in preview-window order, instead of the order in which they were recieved from the server
-    var imagedescs = [];
-
-    if(pc.uploadsCompleted){
-      if(pc.uploadsCompleted != pc.uploadsStarted-pc.uploadsCancelled){
-        bootbox.alert("You have image uploads in progress.");
-        return;
-      }else{
-        for(let i=0; i < $(pc).find('.newimagecont').length; i++){
-          let imageWindow = $($(pc).find('.newimagecont')[i]); // i feel like there probably exists a cleaner way to do this than $($())?
-          sortedurls.push(pc.uploadedImageUrls[imageWindow.attr('urlpos')]);
-          imagedescs.push(imageWindow.find('#postImageDescription').val());
-        }
-      }
-    }
-
-    if (commentContainer[0].hasContent() || sortedurls.length > 0) { // Filter out empty comments
-      commentButton.prop('disabled', true);
-      $.post("/createcomment/"+postID+"/"+commentID,
-      { commentContent: commentContent,
-        imageUrls: JSON.stringify(sortedurls),
-        imageDescs: JSON.stringify(imagedescs)
-      },
-      function(data) {
-        if (data!='nope'){
-          commentEditor.html('');
-          var appendedComment = $(data.comment).hide().appendTo(commentsContainer).fadeIn();
-          //add the lightbox listener to the newly appended comment images
-          var commentimages = appendedComment.find('.post-images a');
-          if (commentimages.length > 0) {
-            var $images = commentimages;
-            var $imagesGrouped = $images.filter('[data-group]');
-            var $imagesAlone = $images.not($imagesGrouped);
-            var params = {
-              // your params
-            };
-
-            // Handle standalone images
-            $imagesAlone.each(function (index, element) {
-              $(element).simpleLightbox(params);
-            });
-
-            // Handle grouped imags
-            if ($imagesGrouped.length > 0) {
-              // Select all groups
-              var groupNames = $imagesGrouped.map(function () {
-                return $(this).data('group');
-              }).get();
-              groupNames = $.unique(groupNames);
-
-              // Apply on each group
-              $.each(groupNames, function (key, value) {
-                $imagesGrouped.filter(function () {
-                    return $(this).data('group') == value;
-                  })
-                  .simpleLightbox(params);
-              });
-            }
-          }
-
-
-          let counterToChange = commentButton.closest(".post").find(".show-comments").find('.comments-number')[0];
-          if(counterToChange.textContent === ""){
-            counterToChange.innerHTML = "1";
-          } else {
-            let newCommentCount = parseInt(counterToChange.textContent)+1;
-            counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount-1), newCommentCount);
-          }
-          // Reset (or DESTROY) comment form
-          if (commentType == "primary") {
-              commentButton.prop('disabled', false);
-              emojiWindow.hide();
-              $(pc).children('.newimagecont').remove(); //removes all image preview windows
-          }
-          else if (commentType == "child") {
-              commentForm.remove();
-          }
-          pc.uploadsStarted = 0;
-          pc.uploadsCompleted = 0;
-          pc.uploadsCancelled = 0;
-          pc.uploadedImageUrls = [];
-          pc.imageUploadRequests = [];
-        } else {
-          let html = '<article class="comment"><div class="alert alert-danger">There has been a problem posting your comment. Sorry! Please copy the comment text, refresh the page, and try again.</div></article>'
-          $(html).hide().appendTo(commentsContainer).fadeIn();
-          // commentButton.prop('disabled', false); // Probably don't disable the reply button if an error occurs because god knows what else has happened to the form
-        }
-      });
-    }
-  })
   $('body').on('click', '.notificationLink', function(e) {
     e.preventDefault();
     var link = this.href;
