--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1016,10 +1016,23 @@ hr {
   min-height: 4rem;
 }
 
+/*used to dim non-droppable areas upon drag-and-drop dragover*/
+#bodyFader {
+    z-index: 355;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #00000055;
+    display: none;
+}
+
 .ql-container {
   font-family:inherit;
   padding: 0;
   background-color:#fff;
+  z-index:356; /*one higher than #bodyFader, as these are the droppable areas*/
 }
 
 .ql-editor.ql-blank::before {
